Don't crash during a slow (>= 60 seconds) startup

A quick benchmark shows that the added QCoreApplication::processEvents()
call takes the same time - 6 milliseconds - in Debug and Release builds.
6 milliseconds is not a noticeable startup slowdown, especially
considering that the event loop does useful work: processes events,
which would have to be handled eventually anyway.

BUG: 425841
FIXED-IN: 5.7.0